fix out of map exploits on c10m5_houseboat

--- a/cfg/stripper/zonemod/maps/c10m5_houseboat.cfg
+++ b/cfg/stripper/zonemod/maps/c10m5_houseboat.cfg
@@ -1,4 +1,41 @@
 ; =====================================================
+; ================  RL4D2L ADDITIONS  =================
+; =====================================================
+;--- out of map fixes (confogl only)
+add:
+{
+	"origin" "-560 1921 -20"
+	"mins" "-2970 -3197 -200"
+	"maxs" "0 0 1290"
+	"initialstate" "1"
+	"BlockType" "2"
+	"classname" "env_physics_blocker"
+}
+{
+	"origin" "1700 -800 200"
+	"mins" "-2300 -200 -200"
+	"maxs" "0 1 1290"
+	"initialstate" "1"
+	"BlockType" "2"
+	"classname" "env_physics_blocker"
+}
+{
+	"origin" "6832 -4853.85 225"
+	"mins" "0 0 -200"
+	"maxs" "250 0 1290"
+	"initialstate" "1"
+	"BlockType" "2"
+	"classname" "env_physics_blocker"
+}
+{
+	"origin" "7010 -4889 225"
+	"mins" "0 0 -200"
+	"maxs" "0 1215 1290"
+	"initialstate" "1"
+	"BlockType" "2"
+	"classname" "env_physics_blocker"
+}
+; =====================================================
 ; =========  PROMOD HUNTINGRIFLE REPLACEMENT  =========
 ; =====================================================
 
